# acts

./: CMakeLists.txt  README.md
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/TrackInferring/: CMakeLists.txt
Examples/Algorithms/TrackInferring/include/ActsExamples/TrackInferring/: TrackInferringAlgorithm.hpp  TrackInferringOptions.hpp
Examples/Algorithms/TrackInferring/src/: TrackInferringAlgorithm.cpp  TrackInferringAlgorithmFunction.cpp  TrackInferringOptions.cpp
Examples/Run/Reconstruction/: CMakeLists.txt  GenericRecGNNTracks.cpp
Examples/Run/Reconstruction/Common/: CMakeLists.txt  RecGNNTracks.cpp
Examples/Run/Reconstruction/Exatrkx/: CMakeLists.txt  GenericRecGNNTracks.cpp  GenericRecScriptedGNNTracks.cpp  RecGNNTracks.cpp  RecGNNTracks.hpp
Plugins/: CMakeLists.txt
Plugins/Cuda/: CMakeLists.txt
Plugins/Exatrkx/: CMakeLists.txt
Plugins/Exatrkx/include/Acts/Plugins/Exatrkx/: gnn.hpp  gnn.ipp  gnn_dplet_impl.hpp  gnn_impl.hpp  gnn_inference_impl.hpp  gnn_tplet_impl.hpp  pythonHelper.hpp  torchHelper.hpp
Plugins/Exatrkx/src/: exatrkxtest.py  gnn.cpp
Tests/UnitTests/Plugins/: CMakeLists.txt
Tests/UnitTests/Plugins/Exatrkx/: CMakeLists.txt  Cell.hpp  ExatrkxInferenceTest.cpp  Particle.hpp  SeedfinderExatrkxTest.cpp  SpacePoint.hpp  Track.hpp  Truth.hpp  Volumes.hpp  helper.hpp  ioFileHelper.hpp  prep_small.yaml  trackHelper.hpp
